kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quartercog
    type: frontend
  name: quartercog-frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: quartercog
    type: frontend
