kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

  name: ingress
spec:
  rules:
    - host: www.quartercog.com
      http:
        paths:
          - backend:
              serviceName: quartercog-frontend
              servicePort: 80
            path: /
          - backend:
              serviceName: ingress-example-joomla
              servicePort: 80
            path: /joomla
          - backend:
              serviceName: foo
              servicePort: 80
            path: /foo
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - www.quartercog.com
      secretName: quartercog-tls
