kube/joomla-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joomla-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: www.quartercog.com.au
    - http:
        paths:
          - path: /
            backend:
              serviceName: ingress-example-joomla
              servicePort: 80
  tls:
    - hosts:
        - "www.quartercog.com.au"
      secretName: joomla-tls-cert
